# cloak_privacy_browser

./: CONTRIBUTING.md  Cargo.toml  MODULAR_STRUCTURE.md  README.md  SECURITY.md  ad-blocker-ui.js  certificate-pinning.js  config.js  memory-optimizer.js  platform-detection-prevention.js  security_test.bat  security_test.sh  service-worker.js  storage.js  test-ad-blocker-simple.html  test-ad-blocker.html  test-audio-fingerprint.html  test-canvas-fingerprint.html  test-certificate-pinning.html  test-localstorage-fix.html  test-new-features.html  test-settings.html  test-tor-in-browser.html  test-tor-initialization.html  test-tor-network.html  test-webgl-fingerprint.html  test-webrtc-enabled.html  test-webrtc-protection.html  test-webrtc-simple.html  wasm-module.js  webgl-renderer.js  webrtc-protection.js
src/: aggressive-ad-blocker.js  audio-fingerprint-protection.js  bootstrap-modular.js  canvas-fingerprint-protection.js  connection-spoofing.js  filter-lists.js  main.rs  performance-boosts.js  start-page.js  theme.js  ui-modular.js  ui.js
